core/codegen/tests/ui-fail/responder-types.stderr
error[E0277]: the trait bound `usize: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/responder-types.rs:38:13
   |
38 | fn foo() -> usize { 0 }
   |             ^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `usize`
   |
   = note: required by `rocket::handler::<impl rocket::Outcome<rocket::Response<'r>, rocket::http::Status, rocket::Data>>::from`

error[E0277]: the trait bound `u8: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/responder-types.rs:11:5
   |
11 |     thing: u8,
   |     ^^^^^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `u8`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<u8>` is not satisfied
  --> $DIR/responder-types.rs:18:5
   |
18 |     other: u8,
   |     ^^^^^^^^^ the trait `std::convert::From<u8>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `u8`

error[E0277]: the trait bound `u8: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/responder-types.rs:24:5
   |
24 |     thing: u8,
   |     ^^^^^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `u8`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<u8>` is not satisfied
  --> $DIR/responder-types.rs:26:5
   |
26 |     other: u8,
   |     ^^^^^^^^^ the trait `std::convert::From<u8>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `u8`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<std::string::String>` is not satisfied
  --> $DIR/responder-types.rs:34:5
   |
34 |     then: String,
   |     ^^^^^^^^^^^^ the trait `std::convert::From<std::string::String>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `std::string::String`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
